Grammer.txt
program → decl_list

decl_list → decl decl_list'
decl_list' → decl decl_list' | ε

decl → type_spec IDENT decl'
decl' → var_decl | fun_decl
var_decl → ; | [ ] ;
fun_decl → ( params ) compound_stmt

type_spec → VOID | BOOL | INT | FLOAT
params → param_list | VOID

param_list → param param_list'
param_list' → , param param_list' | ε

param → type_spec IDENT param'
param' → ε | [ ]

stmt_list → stmt stmt_list | ε

stmt → expr_stmt | compound_stmt | if_stmt | while_stmt | return_stmt | break_stmt
expr_stmt → expr00 ; | ;
while_stmt → WHILE ( expr00 ) stmt
compound_stmt → { local_decls stmt_list }

local_decls → local_decl local_decls | ε

local_decl → type_spec IDENT local_decl'
local_decl' → ; | [ ] ;

return_stmt → RETURN return_stmt'
return_stmt' → ; | expr00 ;

if_stmt → IF ( expr ) stmt | IF ( expr ) stmt ELSE stmt


expr00 → expr01 expr00'
expr00' → OR expr01 expr00' | ε

expr01 → expr02 expr01'
expr01' → And expr02 expr01' | ε

expr02 → expr03 expr02'
expr02' → EQ expr03 expr02' | ε

expr03 → expr04 expr03'
expr03' → NE expr04 expr03' | ε

expr04 → expr05 expr04'
expr04' → LE expr05 expr04' | ε

expr05 → expr06 expr05'
expr05' → < expr06 expr05' | ε

expr06 → expr07 expr06'
expr06' → GE expr07 expr06' | ε

expr07 → expr08 expr07'
expr07' → > expr08 expr07' | ε

expr08 → expr09 expr08'
expr08' → + expr09 expr08' | ε

expr09 → expr10 expr09'
expr09' → - expr10 expr09' | ε

expr10 → expr11 expr10'
expr10' → * expr11 expr10' | ε

expr11 → expr12 expr11'
expr11' → / expr12 expr11' | ε

expr12 → expr13 expr12'
expr12' → % expr13 expr12' | ε

expr13 → ! expr14
expr13 → expr14
expr14 → - expr15
expr14 → expr15
expr15 → + expr16
expr15 → expr16
expr16 → ( expr00 )

expr16 → IDENT expr16'
expr16' →  ε | = expr00 | . size | ( args ) | [ expr00 ] expr16''
expr16'' →  ε | = expr00
expr16 → BOOL_LIT | INT_LIT | FLOAT_LIT | NEW type_spec [ expr00 ]

arg_list → expr00 arg_list'
arg_list' → , expr00 arg_list' | ε

args → arg_list | ε
